objects/Sprint__c.object
<CustomObject>
    <description>The sprints of a project.</description>
    <label>Sprint</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Completed_Story_Points_Percentage__c</fullName>
        <formula>(Number_of_completed_Story_Points__c * 1) /   Total_Amount_Story_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Story Points Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Day_left_until_Sprint_finishes__c</fullName>
        <formula>IF( Name &lt;&gt; &quot;Product Backlog&quot;, TEXT( ROUND(End_Date__c -  Start_Date__c, 0) ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day left until Sprint finishes.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date of the sprint.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_completed_Story_Points__c</fullName>
        <label>Number of completed Story Points</label>
        <summaryFilterItems>
            <field>Work_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Done</value>
        </summaryFilterItems>
        <summaryForeignKey>Work_Item__c.Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_not_completed_Story_Points__c</fullName>
        <label>Number of not completed Story Points</label>
        <summaryFilterItems>
            <field>Work_Item__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Done</value>
        </summaryFilterItems>
        <summaryForeignKey>Work_Item__c.Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date of the sprint.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Story_Points__c</fullName>
        <label>Total Amount Story Points</label>
        <summaryForeignKey>Work_Item__c.Sprint__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <validationRules>
        <fullName>Avoid_Product_Backlog_renaming</fullName>
        <active>true</active>
        <description>Avoid users to rename the sprint Product Backlog.</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
PRIORVALUE(Name)= &quot;Product Backlog&quot;
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>It isn&apos;t possible to change the name &quot;Product Backlog&quot;.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>